**  denotes quite substantial/important changes
*** denotes really big changes 

Liable to change in future release:
- method="GCV.Cp" as default in gam. Default will 
  change to "REML". (1.8-24, June 2018) 

Currently deprecated and liable to be removed:
- gam performance iteration (1.8-19, Sept 2017)
- argument 'pers' in plot.gam (1.8-23, Nov 2017)

Issues: 

* t2 in bam(...,discrete=TRUE) - not treated as tensor products at 
present, and reparameterization needs checking (also for bam). 

* bam(...,discrete=TRUE) does not currently deal with the corner case in 
  which no smoother is penalized.

* OpenBLAS 0.3.2/3 appears not to be thread safe at present - can
  cause problems when opemmp multithreading.

1.8-29

* Gamma location-scale family 'gammals' added. See ?gammals. 

* changes to general families to allow return of first deriv of penalized 
  Hessian component more easily.

* ocat bug fix. Response scale prediction was wrong - it ignored the estimated
  thresholds. Thanks to Fabian Scheipl. 

* bam deviance could be wrongly returned, leading to 100% explained 
  deviance. Fixed.  

1.8-28

* fix of obscure sp naming bug.	 

* changed some contour default colours from green to blue (they overlay 
  heatmaps, so green was a stupid choise).

* Tweedie likelihood evaluation code made slightly more robust - for a model
  with machine zero scale parameter estimate it could segfault, as series 
  maximum location could then overflow integer storage. Fixed + upper limit 
  imposed on series length (warning if its not enough). 

1.8-27

** Added routine 'ginla' for fully Bayesian inference based on an integrated
  nested Laplace approximation (INLA) approach. See ?ginla.

* Tweedie location scale family added: 'twlss'. 

* gam.fit5 modified to distinguish more carefully between +ve semi definite
  and +ve definite. Previously could fail, claiming indefiniteness when it 
  should not have. Affects general families.
